--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,7 +26,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: AhoCorasick.Net.0.8.0
-        path: **/*.nupkg
+        path: '**/*.nupkg'
 
     - name: Done
       run: echo "Nuget package published to Github packages"
