add NBGV to manage version numbers for us

--- a/src/AhoCorasick.Net/AhoCorasick.Net.csproj
+++ b/src/AhoCorasick.Net/AhoCorasick.Net.csproj
@@ -8,14 +8,12 @@
     <FileAlignment>512</FileAlignment>
     <TargetFramework>net8.0</TargetFramework>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <Version>0.8.0</Version>
     <PackageId>AhoCorasick.Net</PackageId>
     <Authors>alexandrnikitin</Authors>
-    <RepositoryUrl>https://github.com/trasa/AhoCorasick.Net</RepositoryUrl>
-    <PackageProjectUrl>https://github.com/trasa/AhoCorasick.Net</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/ManticoreGamesInc/AhoCorasick.Net</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/ManticoreGamesInc/AhoCorasick.Net</PackageProjectUrl>
     <Description>High-performance Aho-Corasick implementation for .NET</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageVersion>0.8.0</PackageVersion>
     <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
